2001-02-19  Paul Eggert  <eggert@twinsun.com>

	* aclang.m4 (AC_C_INLINE): Define "inline" to empty if the
	compiler doesn't support 'static inline'.  This is needed for
	Encore Umax-3.0.9.16b.

2001-02-19  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (_AC_LANG_COMPILER_WORKS): Rename as...
	(_AC_COMPILER_EXEEXT_WORKS): this.  Use the `a.out' or `a.exe'
	left by _AC_COMPILER_EXEEXT_DEFAULT to check if the compiler works.
	(_AC_COMPILER_EXEEXT_CROSS): Extract from the above macro.
	(_AC_COMPILER_EXEEXT): Use them.
	Adjust all the compiler looking macros to check for EXEEXT
	*first*, then OBJEXT.
	Set ac_exeext yourself.
	(_AC_COMPILER_EXEEXT_O): Don't.

2001-02-07  Pavel Roskin  <proski@gnu.org>

	* tests/atspecific.m4 (AT_CONFIGURE_AC): Double quote constant
	part of the second argument to AT_DATA.
	* tests/compile.at (AC_PROG_CPP with warnings): Fix underquoting
	in a call to _AT_CHECK_AC_MACRO.
	(AC_PROG_CPP without warnings): Likewise.

2001-02-11  Jim Meyering  <meyering@lucent.com>

	Ensure that even `autoscan --version' fails when e.g.,
	writing to a full disk.
	* autoscan.pl (END): New function.

	* autoscan.pl: Misc. clean-up:
	Move declarations of variables into the scope where they're used.
	Use `qw'.  Don't use `$_'.

2001-02-06  Paul Eggert  <eggert@twinsun.com>

	* acspecific.m4 (AC_SYS_LARGEFILE_TEST_INCLUDES): Don't reject
	C++ compilers that are masquerading as C compilers, and that
	incorrectly reject large integers.

2001-02-07  Pavel Roskin  <proski@gnu.org>

	* acgeneral.m4 (AC_OUTPUT): Remove $(srcdir), ${srcdir} and
	@srcdir@ from VPATH if srcdir is "." and replace blank VPATH
	lines with empty lines to preserve line numbers.
	Original version by Derek Price.

2001-02-07  Derek Price  <derek.price@openavenue.com>

	* acgeneral.m4 (_AC_LIBOBJ): Call AC_LIBSOURCE with '.c' extension
	appended to function name.

2001-02-06  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_RUN_LOG, _AC_RUN_LOG_STDERR, AC_RUN_LOG): New.