@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.24.
-.TH AUTOUPDATE "1" "January 2001" "GNU Autoconf 2.49d" FSF
+.TH AUTOUPDATE "1" "February 2001" "GNU Autoconf 2.49d" FSF
 .SH NAME
 autoupdate \- Update a configure.in to a newer Autoconf
 .SH SYNOPSIS
