@@ -1,3 +1,8 @@
+2001-02-20  Paul Martinolich <martinol@datasync.com>
+
+	* autoscan.pl (check_configure_ac): Pretty missing macro warnings
+	output.
+
 2001-02-19  Paul Eggert  <eggert@twinsun.com>
 
 	* aclang.m4 (AC_C_INLINE): Define "inline" to empty if the
